[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-pm"
version = "0.1.0"
description = "Personal AI project manager for macOS terminal"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "anthropic>=0.20.0",
    "schedule>=1.2.0",
]

[project.scripts]
pulse = "pulse.cli:app"
